crates/solidity-v2/testing/snapshots/diagnostics_output/semantic/constant_cycles/storage_base_slot/cyclic/generated/slang/0.8.29-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 3

Error: Cyclic constant definition (or maximum recursion depth exhausted).
   ╭─[input.sol:7:1]
   │
 7 │ contract C layout at A {}
   │ ────────────┬────────────  
   │             ╰────────────── Error occurred here.
───╯

Error: The value of the constant A has a cyclic dependency via B.
   ╭─[input.sol:4:1]
   │
 4 │ uint256 constant A = B;
   │ ───────────┬───────────  
   │            ╰───────────── Error occurred here.
───╯

Error: The value of the constant B has a cyclic dependency via A.
   ╭─[input.sol:5:1]
   │
 5 │ uint256 constant B = A;
   │ ───────────┬───────────  
   │            ╰───────────── Error occurred here.
───╯
